# car_demo

car_demo/: CMakeLists.txt  TODO.txt  package.xml
car_demo/config/: mavs_params.yaml
car_demo/launch/: demo.launch  mavs.launch
car_demo/nodes/: joystick_translator
car_demo/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
vehicle_description/: CMakeLists.txt  package.xml
vehicle_description/config/: hmmwv_params.yaml
vehicle_description/launch/: hmmwv.launch
vehicle_description/src/: odom.py
vehicle_description/urdf/: body.urdf.xacro  obstacles.urdf.xacro  prius.urdf  steering_wheel.urdf.xacro  vehicle.urdf.xacro  wheel_axle.urdf.xacro
vehicle_msgs/: CMakeLists.txt  package.xml
